[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dfiq"
authors = [{name = "Ryan Benson", email = "ryan@dfir.blog"}]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3"
]
dynamic = ["dependencies", "version"]
description = "DFIQ is a collection of investigative questions and the approaches for answering them"
keywords=["dfiq", "forensics", "dfir", "investigative questions", "security", "digital forensics"]

[tool.setuptools]
packages = [
    "dfiq",
    "dfiq.data.approaches",
    "dfiq.data.facets",
    "dfiq.data.questions",
    "dfiq.data.scenarios",
    "dfiq.scripts",
    "dfiq.templates",
    "dfiq.utils"
]

[tool.setuptools_scm]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { attr = "dfiq.__version__" }

[project.urls]
Homepage = "https://dfiq.org"
Repository = "https://github.com/google/dfiq"
